# platform

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile.eai-ide  Dockerfile.minio  Dockerfile.postgres  Dockerfile.redis  Makefile  README.md  docker-compose.postgres-minio.yml  docker-compose.yml  eai_ide_backup.sql  label_task_description.py  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
agent/: CHANGELOG.md  PREREQUISITES.md  README.md  agent_main.py  collect_script_scanner.py  config.py  eai_quality_report_helpers.sh  eai_tunnel_support.py  environment.lock.json  environment.lock.txt  jiagou.md  requirements.txt  ros2_camera_stream.py  ros2_robot_state_bridge.py  validate_bag.py
agent/debs/: .gitignore  README.md  fetch-ubuntu-venv-debs.sh
agent/scripts/: generate_environment_lock.sh
backend/: .env.example  .gitignore  README.md  alembic.ini  main.py  requirements-dev.txt  requirements.txt  worker.py
backend/agent_packages/: build_agent_bundle.sh  manifest.json
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: start_workers.sh
backend/tests/: IMPORT_VERIFICATION.md  isaacsim_franka_pick_place_test_helpers.py  test_act_eval_resolver.py  test_act_joint_space.py  test_adapter_layer.py  test_adapter_layer_adaptation.py  test_adapter_layer_api.py  test_agent_deb_builder.py  test_agent_install_dispatcher.py  test_agent_install_packaging.py  test_agent_installer_linux_script.py  test_artifact_upload_service.py  test_attachment_controller.py  test_attachment_side_channel.py  test_cable_threading_bridge.py  test_cable_threading_dp_eval_resolver.py  test_cable_threading_eval_display_video.py  test_cable_threading_external_data_root_smoke.py  test_cable_threading_failure_metrics.py  test_cable_threading_generate_request.py  test_cable_threading_hdf5_export.py  test_cable_threading_hdf5_trajectory.py  test_cable_threading_lerobot_generation.py  test_cable_threading_policy_obs.py  test_checkpoint_registry_dedupe.py  test_collect_disk_reconcile.py  test_collect_progress_guard.py  test_collect_script_scanner.py  test_collection_progress_guard.py  test_custom_model_type_training_job.py  (+132 more)
backups/: README.md
configs/: README.md
data/: .gitignore  README.md
deploy/: README.md  rq-worker-collect.service  rq-worker-cpu.service  rq-worker-gpu.service  rq-worker-io.service  rq-worker.service
docker/: env.split.example  start.sh
docs/: CYTHON_CORE.md  HDF5.md  PYARMOR.md  README.md  SQLite-to-PostgreSQL-Migration-Guide.md  WORKLOG.md  agent-install-api.md  architecture-overview.md  architecture.md  backend-api.md  data-path-contract.md  demo-act-dp-walkthrough.md  development.md  device-creation-dev-guide.md  docker-split-deploy.md  evaluation-adapter-layer.md  minio-direct-upload.md  pi0-openpi-runner.md  pi0-openpi-setup.md  product-overview.md  repository-layout.md  stream-reliability.md  user-guide.md  workspace-trial-guide.md
e2e/: act-training.spec.ts  block-stacking-dp-training.spec.ts  collect-list-and-progress.spec.ts  demo-freeze-acceptance.spec.ts  dual-arm-cable-ui-walkthrough-part2.spec.ts  dual-arm-cable-ui-walkthrough.spec.ts  isaac-data-generation-routing.spec.ts  model-types-page.spec.ts  pre-demo-ui-acceptance.spec.ts  workspace-phase1-regression.spec.ts
phygen/: __init__.py
scripts/: README.md  collect_data1.sh  eai_quality_report_helpers.sh  free_frontend_port.sh  restart-all.sh  restart.sh  start.sh  stop.sh  train_phygen.py  view_mujoco_asset.py
scripts/rm_robot/realsense_ws/src/realsense-ros/realsense2_rgbd_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
scripts/rm_robot/realsense_ws/src/realsense-ros/realsense2_rgbd_plugin/include/: realsense_rviz_plugin.hpp  ros_image_texture.hpp
scripts/rm_robot/realsense_ws/src/realsense-ros/realsense2_rgbd_plugin/plugins/: realsense_rviz_plugin_description.xml
scripts/rm_robot/realsense_ws/src/realsense-ros/realsense2_rgbd_plugin/src/: realsense_rviz_plugin.cpp  ros_image_texture.cpp
src/: middleware.ts
(+1737 files in other folders)
